--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,25 @@
 // Navigation code here
+
+.nav-section{
+    //font-size: 2rem;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    background-color:@border-real;
+
+    h1{
+        font-size: 5rem;
+        padding-bottom: 10px;
+    }
+    nav{
+        font-size: 2rem;
+        padding-bottom: 8px;  
+       
+    }
+    a{
+        margin-left: 20px;
+        color:@waterloo;
+
+    }
+}
