--- a/css/index.css
+++ b/css/index.css
@@ -189,6 +189,11 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.home .intro img {
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 .home .intro h2 {
   padding: 15px;
 }
@@ -230,6 +235,29 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  width: 20px;
+  padding: 10px 20%;
+  font-size: 1.5rem;
+  border-radius: 10px;
+  color: white;
+  background-color: #23293B;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: green;
+  color: orange;
+  font-size: 2rem;
+  cursor: pointer;
+}
+@media (max-width:515px) {
+  .home .walk .walk-text .btn {
+    background-color: White;
+    color: blue;
+  }
 }
 .home .walk .walk-img {
   width: 46%;
