--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,12 @@
 
   .intro {
 
+    img{
+      width: 100%;
+      padding-left:10px;
+      padding-right:10px;
+    }
+
     h2 {
       padding: 15px;
     }
@@ -58,6 +64,7 @@
       }
 
       .btn {
+        .custom-button();
       }
     }
 
