--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,42 @@
 // Mixins Here
+
+//custom navigation for navigaton page
+.custom-nav(){ 
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    background-color:@border-real;
+
+}
+
+
+
+
+
+//Paremeters mixin - style for button
+
+.custom-button(@bg-color:@ebony-clay, @width:20px, @font-color:white ){
+    display:flex;
+    justify-content:center;
+    flex-direction: row; 
+    width:@width;
+    padding:10px 20%;
+    font-size: 1.5rem;
+    border-radius: 10px;
+    color:@font-color;
+    background-color:@ebony-clay;
+
+    &:hover{
+        background-color:green;
+        color:orange;
+        font-size: 2rem;
+        cursor:pointer;
+    }
+
+    @media @mobile{
+        background-color:White;
+        color: blue;
+    }
+}
+
