--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,12 +1,8 @@
 // Navigation code here
 
 .nav-section{
-    //font-size: 2rem;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    background-color:@border-real;
+
+    .custom-nav();
 
     h1{
         font-size: 5rem;
