--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,11 +5,20 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
     background-color:@border-real;
+ 
 
 }
 
+//custom a tag
+
+.custom-atag(){
+    margin-left: 20px;
+    color:@waterloo;
+    text-decoration: none;
+    
+
+}
 
 
 
@@ -34,9 +43,12 @@
         cursor:pointer;
     }
 
-    @media @mobile{
-        background-color:White;
-        color: blue;
+    @media @phone{
+        background-color:@ebony-clay;
+        color: white;
+        width: 370px;
+        padding:20px;
+        border-radius: 5px;
     }
 }
 
