--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,9 @@
 .nav-section{
 
     .custom-nav();
+   
+
+
 
     h1{
         font-size: 5rem;
@@ -14,8 +17,6 @@
        
     }
     a{
-        margin-left: 20px;
-        color:@waterloo;
-
+        .custom-atag();
     }
 }
