--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,10 +4,21 @@
 
   .intro {
 
-    img{
+    .main-picture{
       width: 100%;
-      padding-left:10px;
-      padding-right:10px;
+      height: auto;
+      padding-right:  5px;
+      padding-left:  5px;
+      margin: 0;
+     
+
+      @media @phone{
+         padding-left:0;
+        padding-right:0;
+        border-radius:5px;
+        width:90%;
+        margin: 0 10px;
+      }
     }
 
     h2 {
@@ -23,7 +34,18 @@
   .space-images {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+   width: 100%;
+    @media @phone{
+      justify-content: center;
+      .sky{
+        display:none;
+      }
+      .launch{
+        display:none;
+      }
+     }
+
+    }
 
     img {
       width: 28%;
@@ -31,6 +53,10 @@
       border-radius: 20px;
       height: 100%;
     }
+    @media @phone{
+      .blast{
+        width: 100%; 
+      }
   }
 
   .visit-planets {
@@ -52,8 +78,19 @@
     display: flex;
     justify-content: center;
 
+    @media @phone{
+      display: flex;
+      flex-direction:column-reverse;
+      width: 100%;
+
+    }
+
     .walk-text {
       width: 50%;
+      
+      @media @phone {
+        width:102%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -71,11 +108,16 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width:110%;
+        margin: 0 auto;
+      }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+        
       }
     }
   }
