made an adjustment to bottom picture

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -49,6 +49,8 @@
         width: 370px;
         padding:20px;
         border-radius: 5px;
+        margin-left: 20px;
+        margin-bottom: 20px;
     }
 }
 
