--- a/css/index.css
+++ b/css/index.css
@@ -258,7 +258,8 @@ footer {
   .home .walk {
     display: flex;
     flex-direction: column-reverse;
-    width: 100%;
+    width: 80%;
+    padding: 0;
   }
 }
 .home .walk .walk-text {
@@ -272,8 +273,18 @@ footer {
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
 }
+@media (max-width:515px) {
+  .home .walk .walk-text h3 {
+    margin-left: 10px;
+  }
+}
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+@media (max-width:515px) {
+  .home .walk .walk-text p {
+    margin-left: 10px;
+  }
 }
 .home .walk .walk-text .btn {
   display: flex;
@@ -299,6 +310,8 @@ footer {
     width: 370px;
     padding: 20px;
     border-radius: 5px;
+    margin-left: 20px;
+    margin-bottom: 20px;
   }
 }
 .home .walk .walk-img {
