--- a/less/home-page.less
+++ b/less/home-page.less
@@ -74,14 +74,16 @@
   .walk {
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
-    padding: 50px 60px;
+    padding: 50px 60px;  
     display: flex;
     justify-content: center;
 
     @media @phone{
       display: flex;
       flex-direction:column-reverse;
-      width: 100%;
+      width: 80%;
+      padding:0;
+
 
     }
 
@@ -94,10 +96,16 @@
 
       h3 {
         margin-bottom: 10px;
+        @media @phone{
+          margin-left:10px;
+        }
       }
 
       p {
         margin-bottom: 26px;
+        @media @phone{
+          margin-left: 10px;
+        }
       }
 
       .btn {
